expires in http context

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -104,7 +104,7 @@ http {
   <%- end -%>
 <% end -%>
   server_tokens <%= @server_tokens %>;
-
+  expires <%= @expires %>;
   types_hash_max_size <%= @types_hash_max_size %>;
   types_hash_bucket_size <%= @types_hash_bucket_size %>;
 
